# face-auth-linux

./: .gitignore  CMakeLists.txt  README.md  install.sh  test_all_cameras.cpp
include/: camera_handler.h  data_manager.h  face_detector.h  face_recognizer.h
src/: camera_handler.cpp  data_manager.cpp  face_detector.cpp  face_recognizer.cpp  main.cpp  pam_module.cpp  verify.cpp
